# ShogunRemote-OSC

./: README.md  config.py  main.py  main_window.py  osc_server.py  requariment.txt  shogun_worker.py
gui/: __init__.py  log_panel.py  main_window.py  status_panel.py
logger/: __init__.py  custom_logger.py
osc/: osc_server.py
shogun/: __init__.py  shogun_client.py
shogun_live_api/: CHANGES.rst  pyproject.toml  setup.cfg  setup.py
shogun_live_api/shogun_live_api/: __init__.py
shogun_live_api/shogun_live_api/interfaces/: __init__.py  application_services.py  camera_calibration_services.py  camera_device_services.py  capture_services.py  log_services.py  playback_services.py  selection_services.py  subject_calibration_services.py  subject_services.py  view_services.py
shogun_live_api/shogun_live_api/types/: __init__.py  e_timecode_standard.py  timecode_135mhz.py  vicon_tick_135mhz.py
styles/: __init__.py  app_styles.py
vicon_core_api/: CHANGES.rst  pyproject.toml  setup.cfg  setup.py
vicon_core_api/vicon_core_api/: __init__.py  client.py  result.py  schema.py  terminal_services.py  vicon_interface.py
