# Package setup and metadata for Shogun Live API.

[metadata]
name = shogun_live_api

author = Vicon Motion Systems Ltd

author_email = support@vicon.com

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3

description = Services provided by Shogun Live for Vicon Core API users.

license_files = [LICENSE.rst]

long_description = file: README.rst, CHANGES.rst, LICENSE.rst

url = https://www.vicon.com/support

version = file: VERSION


[options]
packages = find:

python_requires = >=2.7

install_requires =
   vicon_core_api
