# Package setup and metadata for Vicon Core API.

[metadata]
name = vicon_core_api

author = Vicon Motion Systems Ltd

author_email = support@vicon.com

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

description = Core API components for remote monitoring and control of Vicon applications.

license_files = [LICENSE.rst]

long_description = file: README.rst, CHANGES.rst, LICENSE.rst

url = https://www.vicon.com/support

version = file: VERSION


[options]
packages = find:

python_requires = >=2.7

install_requires =
   enum34; python_version < "3.4"
